--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             <td id="plzSell"></td>
         </tr>
     </table>
+    
+        <a href="https://github.com/ButenkoA/currency_exchange">GitHub files</a>
+
 
 
     <script src="js/main.js"></script>
