--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
 
     <p></p>
-    <a id="link" href="https://github.com/ButenkoA/currency_exchange" target="_blank">GitHub files</a>
+    <a href="https://github.com/ButenkoA/currency_exchange" target="_blank">GitHub files</a>
 
     <script src="js/main.js"></script>
 </body>
